--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production"
+    "start:dev": "nodemon"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +13,8 @@
     "express": "^4.19.2",
     "morgan": "^1.10.0",
     "pg": "^8.11.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
