--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "studiocotufitos",
   "version": "1.0.0",
   "description": "",
-  "main": "webpack.config.js",
+  "main": "index.html",
   "scripts": {
     "start:dev": "nodemon"
   },
