--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "express": "^4.19.2",
     "morgan": "^1.10.0",
-    "pg": "^8.11.5"
+    "pg": "^8.11.5",
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
